--- a/src/components/input-field.css
+++ b/src/components/input-field.css
@@ -1,7 +1,7 @@
 .input__form {
   display: flex;
   align-items: center;
-  width: 90%;
+  width: 95%;
   position: relative;
 }
 .input__box {
@@ -20,7 +20,7 @@
 }
 .submit__btn {
   position: absolute;
-  right: 215px;
+  right: 200px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -38,30 +38,59 @@
 .submit__btn:hover {
   background-color: #5486bd;
 }
-.todos {
+.container {
+  width: 95%;
   display: flex;
-  justify-content: space-evenly;
-  width: 90%;
-  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 10px;
+  gap: 10px;
+}
+.todos {
+  width: 47.5%;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: rgb(50, 195, 205);
+}
+.todos_heading {
+  font-size: 30px;
+  color: #fff;
 }
 .single__todo {
+  /* width: %; */
   display: flex;
-  width: 29.5%;
   border-radius: 5px;
   padding: 20px;
   margin-top: 15px;
   background-image: url("https://img.freepik.com/free-photo/crumpled-yellow-paper-background-close-up_60487-2390.jpg?size=626&ext=jpg");
   transition: 0.2s;
 }
+.single__todo:hover {
+  box-shadow: 0 0 5px black;
+  transform: scale(1.01);
+}
 .single__todo-text {
   flex: 1;
   padding: 5px;
   border: none;
   font-size: 25px;
-
 }
 .completed {
   text-decoration: line-through;
+}
+.edit__input__box {
+  width: 80%;
+  border-radius: 10px;
+  padding: 5px 10px;
+  font-size: 20px;
+  border: none;
+  outline: none;
+  transition: all 0.2s;
+  box-shadow: inset 0 0 5px black;
+  /* margin: auto; */
+  margin-right: 5px;
 }
 .icons {
   display: flex;
@@ -74,18 +103,39 @@
   cursor: pointer;
   margin-top: 5px;
 }
-
+.remove {
+  background-color: rgb(235, 103, 80);
+}
+.draggingActive {
+  background-color: rgb(0, 221, 236);
+}
+.draggingCompleted {
+  background-color: rgb(225, 38, 0);
+}
+.dragTodo {
+  box-shadow: 0 0 20px black;
+}
+@media (max-width: 1100px) {
+  .todos {
+    width: 45%;
+  }
+}
 @media (max-width: 768px) {
   .input__box {
     width: 80%;
   }
   .submit__btn {
-    right: 15px;
+    right: 20px;
   }
   .todos {
-    width: 90%;
+    width: 95%;
+    margin-bottom: 10px;
   }
   .single__todo {
-    width: 100%;
+    width: 92%;
+  }
+  .container {
+    width: 95%;
+    flex-direction: column;
   }
 }
